Refactored the tes script to improve the effieciency

--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "build": "npx tsc",
+    "build": "rm -rf ./build/** && npx tsc",
     "start": "nodemon src/server.ts",
     "jasmine": "jasmine",
     "delTestDB": "ENV=test && db-migrate --env test reset",
-    "test": "npm run delTestDB && ENV=test && npx tsc && db-migrate --env test up && jasmine && db-migrate db:drop test"
+    "test": "npm run delTestDB && ENV=test && npm run build && db-migrate --env test up && jasmine && db-migrate db:drop test"
   },
   "keywords": [],
   "author": "",
