--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
@@ -27,6 +28,7 @@
     "@types/node": "^18.11.18",
     "@types/nodemon": "^1.19.2",
     "@types/pg": "^8.6.6",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "eslint": "^8.32.0",
@@ -40,6 +42,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "axios": "^1.2.3",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
