--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
-POSTGRES_HOST=KDFVADAYRKifkfdkdh
-POSTGRES_DB=main_ascjkpCCjbase
-POSTGRES_TEST_DB=;oh;wuwu
-POSTGRES_USER=dldhxaoencsuc
-POSTGRES_PASSWORD=jdxcaikcdsixbc
-BCRYPT_PASSWORD=dccdfxyxosmc
-SALT_ROUNDS=dockndxyx
-TOKEN_SECRET=didjccspsdbc
+POSTGRES_HOST=
+POSTGRES_DB=store
+POSTGRES_TEST_DB=store_test
+POSTGRES_USER=store_manager
+POSTGRES_PASSWORD=
+
+BCRYPT_PASSWORD=
+SALT_ROUNDS=10
+
+TOKEN_SECRET=
+
 PORT=3000
 ENV=test
